# coward.nvim

./: .gitignore  Cargo.toml  README.md  install.py
lua/coward/: config.lua  init.lua
plugin/: coward.lua
src/: db.rs  lib.rs  load_english.rs  main.rs  manager.rs
