[package]
name = "coward"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = "0.38.0"

[profile.release]
opt-level = 3          # Max speed
codegen-units = 1      # Cross-crate inlining (slower compile) [web:364]
lto = "fat"            # Link-time optimization (big speed/binary wins) [web:364]
panic = "abort"        # Smaller binaries (no unwind info)
strip = true           # Remove debug symbols [web:366]

# RUSTFLAGS="-C target-cpu=native -C lto=fat" cargo build --release --target x86_64-unknown-linux-gnu
